# RAG-Chat-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3e22bac4a006_chat_sessions.py  b16bcf5b01b1_initial_schema.py  c4a1f0e2d3b7_agents.py  d5f3a1c8e920_embedding_config_registry.py
backend/app/: cli.py  main.py  schemas.py
backend/app/agent/: checkpointer.py  graph.py  llm.py  retrieval.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/services/: access.py  chunking.py  embedding_config.py  embeddings.py  ingestion.py  parsing.py  reembed.py  vector_store.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_agents.py  test_auth.py  test_chat.py  test_embedding_config.py  test_ingestion.py  test_kb.py  test_reembed.py  test_retrieval.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: Nav.tsx
frontend/app/kb/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts
openspec/changes/add-agent-config/: design.md  proposal.md  tasks.md
openspec/changes/add-rag-mvp/: proposal.md  tasks.md
openspec/specs/chat-retrieval/: spec.md
openspec/specs/document-ingestion/: spec.md
openspec/specs/embedding-config/: spec.md
openspec/specs/knowledge-base/: spec.md
openspec/specs/user-auth/: spec.md
(+19 files in other folders)
