[project]
name = "rag-chat-agent"
version = "0.1.0"
description = "RAG platform: upload documents and chat with an agent about them (FastAPI + LangGraph + pgvector)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.13",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
# Live-LLM tests depend on the external Green Node gateway; deselect by default.
# Run them explicitly with:  uv run pytest -m live
addopts = "-m 'not live'"
markers = [
    "live: tests that call the external LLM gateway (non-deterministic; opt-in)",
]
